// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display ExpensesSummary correctly with many expenses 1`] = `
"<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling
     
    $1,097.00
  </h1>
</div>"
`;

exports[`should display ExpensesSummary correctly with one expense 1`] = `
"<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
     
    $2.00
  </h1>
</div>"
`;
